[workspace]
members = [
    "tcl-sys", "tk-sys",
]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["Ashwin Naren <arihant2math@gmail.com>"]
readme = "README.md"
repository = "https://github.com/arihant2math/tkinter.git"
version = "0.1.0"
license = "Apache-2.0 OR MIT"
include = ["**/*"]
