[workspace]
members = [
    "shared-build", "tcl", "tcl-sys", "tk-sys"
]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["Ashwin Naren <arihant2math@gmail.com>"]
readme = "README.md"
repository = "https://github.com/arihant2math/tkinter.git"
version = "0.3.0"
license = "Apache-2.0 OR MIT"
include = ["**/*"]
rust-version = "1.85"

[workspace.dependencies]
pkg-config = "0.3"
