[package]
name = "tcl-sys"

authors.workspace = true
edition.workspace = true
include.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

description = "Raw TCL bindings for Rust"

[lib]
name = "tcl_sys"

[build-dependencies]
pkg-config = { workspace = true }
shared-build = { path = "../shared-build" }
