[package]
name = "tk-sys"

authors.workspace = true
edition.workspace = true
include.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

description = "Raw TK bindings for Rust"

[lib]
name = "tk_sys"

[build-dependencies]
pkg-config = { workspace = true }
shared-build = { path = "../shared-build" }
