[package]
name = "tk"

authors.workspace = true
edition.workspace = true
include.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

description = "TK bindings for Rust"

[dependencies]
tcl = { version = "0.3", path = "../tcl" }
tk-sys = { version = "0.3", path = "../tk-sys" }
